<resources>
    <string-array name="user_types">
        <item>Customer</item>
        <item>Pickup Agent</item>
    </string-array>
    <string-array name="locations_sort_by">
        <item>Distance</item>
    </string-array>
    <string name="app_name">Republic Cargo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_agent_locations">Agent Location</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_ocean">By Ocean</string>
    <string name="title_air">By Air</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="menu_bookings">Bookings</string>
    <string name="menu_tracking">Tracking</string>
    <string name="menu_logout">Logout</string>
    <string name="label_no_track">No riders to track yet</string>
    <string name="title_activity_maps">Tracking</string>
    <string name="title_activity_agent_main">AgentMainActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_account_setting">Account Settings</string>
    <string name="menu_open_map">Open Map</string>


</resources>
