<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_account_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_account_setting" />
        <item
            android:id="@+id/nav_open_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_open_map" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />

        </menu>
    </item>

</menu>
